--- a/src/Library.Web/packages.config
+++ b/src/Library.Web/packages.config
@@ -6,8 +6,13 @@
   <package id="K4os.Compression.LZ4" version="1.3.8" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.8" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.1" targetFramework="net472" />
+  <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="MySql.Data" version="9.0.0" targetFramework="net472" />
   <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net472" />
   <package id="MySql.Data.EntityFramework" version="9.0.0" targetFramework="net472" />
