--- a/src/Library.Domain/Library.Domain.csproj
+++ b/src/Library.Domain/Library.Domain.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Entities\Author.cs" />
     <Compile Include="Entities\Book.cs" />
     <Compile Include="Entities\Member.cs" />
+    <Compile Include="Entities\Publisher.cs" />
     <Compile Include="Entities\Rental.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IBookRepository.cs" />
