--- a/src/Library.Infrastructure.Data/Library.Infrastructure.Data.csproj
+++ b/src/Library.Infrastructure.Data/Library.Infrastructure.Data.csproj
@@ -129,14 +129,18 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AuthorRepository.cs" />
+    <Compile Include="Repositories\BookRepository.cs" />
+    <Compile Include="Repositories\Commom\BaseRepository.cs" />
+    <Compile Include="Repositories\MemberRepository.cs" />
+    <Compile Include="Repositories\PublisherRepository.cs" />
+    <Compile Include="Repositories\RentalRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Library.Domain\Library.Domain.csproj">
       <Project>{AC0CB4C8-F0F0-4FC5-B35B-F110499EA1FC}</Project>
