--- a/src/Library.Infrastructure.Data/Library.Infrastructure.Data.csproj
+++ b/src/Library.Infrastructure.Data/Library.Infrastructure.Data.csproj
@@ -15,6 +15,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -123,9 +124,9 @@
     <Compile Include="Mapping\MemberMapping.cs" />
     <Compile Include="Mapping\PublisherMapping.cs" />
     <Compile Include="Mapping\RentalMapping.cs" />
-    <Compile Include="Migrations\202408041331270_v1.cs" />
-    <Compile Include="Migrations\202408041331270_v1.Designer.cs">
-      <DependentUpon>202408041331270_v1.cs</DependentUpon>
+    <Compile Include="Migrations\202408042109172_v1.cs" />
+    <Compile Include="Migrations\202408042109172_v1.Designer.cs">
+      <DependentUpon>202408042109172_v1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -147,8 +148,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202408041331270_v1.resx">
-      <DependentUpon>202408041331270_v1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202408042109172_v1.resx">
+      <DependentUpon>202408042109172_v1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
