Creating a view for the book details

--- a/src/Library.Application/Library.Application.csproj
+++ b/src/Library.Application/Library.Application.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\Book\GetBookCommand.cs" />
     <Compile Include="Commands\Book\SearchBookCommand.cs" />
     <Compile Include="Commands\Member\LoginCommand.cs" />
     <Compile Include="Commands\Member\RegisterCommand.cs" />
