--- a/src/Library.Application/Library.Application.csproj
+++ b/src/Library.Application/Library.Application.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Commands\Book\GetBookCommand.cs" />
     <Compile Include="Commands\Book\SearchBookCommand.cs" />
+    <Compile Include="Commands\Member\GetMemberCommand.cs" />
     <Compile Include="Commands\Member\LoginCommand.cs" />
     <Compile Include="Commands\Member\RegisterCommand.cs" />
     <Compile Include="Handlers\BookCommandHandler.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Results\Book\PublisherCommandResult.cs" />
     <Compile Include="Results\Book\SearchBookCommandResult.cs" />
     <Compile Include="Results\Member\LoginCommandResult.cs" />
+    <Compile Include="Results\Member\MemberCommandResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Library.Domain\Library.Domain.csproj">
