--- a/src/Library.Application/Library.Application.csproj
+++ b/src/Library.Application/Library.Application.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Commands\Book\GetBookCommand.cs" />
     <Compile Include="Commands\Book\RentBookCommand.cs" />
+    <Compile Include="Commands\Book\ReturnBookCommand.cs" />
     <Compile Include="Commands\Book\SearchBookCommand.cs" />
     <Compile Include="Commands\Member\GetMemberCommand.cs" />
     <Compile Include="Commands\Member\LoginCommand.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Results\Book\BookCommandResult.cs" />
     <Compile Include="Results\Book\PublisherCommandResult.cs" />
     <Compile Include="Results\Book\RentBookCommandResult.cs" />
+    <Compile Include="Results\Book\ReturnBookCommandResult.cs" />
     <Compile Include="Results\Book\SearchBookCommandResult.cs" />
     <Compile Include="Results\Member\LoginCommandResult.cs" />
     <Compile Include="Results\Member\MemberCommandResult.cs" />
