--- a/src/Library.Application/Library.Application.csproj
+++ b/src/Library.Application/Library.Application.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Commands\Member\RegisterCommand.cs" />
     <Compile Include="Handlers\BookCommandHandler.cs" />
     <Compile Include="Handlers\MemberCommandHandler.cs" />
+    <Compile Include="Helpers\PasswordHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Results\Book\AuthorCommandResult.cs" />
     <Compile Include="Results\Book\BookCommandResult.cs" />
