--- a/src/Library.Web/Web.config
+++ b/src/Library.Web/Web.config
@@ -31,6 +31,10 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Login/Index" />
     </authentication>
+	  <customErrors mode="On" defaultRedirect="Error">
+		  <error statusCode="404" redirect="~/Error/NotFound" />
+		  <error statusCode="500" redirect="~/Error/ServerError" />
+	  </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
